--- a/web/index.html
+++ b/web/index.html
@@ -40,6 +40,10 @@
   <script src="flutter.js" defer></script>
 </head>
 <body>
+  <script> src="https://www.gstatic.com/firebasejs/9.0.2/firebase-app.js"</script>
+  <script> src="https://www.gstatic.com/firebasejs/9.0.2/firebase-firestore.js"</script>
+  <script> src="https://www.gstatic.com/firebasejs/9.0.2/firebase-storage.js"</script>
+  
   <script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
